Fixed layout issues in production build due to Tailwind 4.1 purging dynamic class strings.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,8 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 @plugin "@tailwindcss/typography";
 
 @theme {
-  --font-inter: 'Inter', 'sans-serif';
+  --font-inter: "Inter", "sans-serif";
   --color-brand-green: #b24160;
   --color-brand-red: #8e5c26;
 }
@@ -14,52 +14,52 @@
 
 @utility prose {
   h1 {
-    font-size: --var(--text-4xl);
+    font-size: --var(--text-5xl);
   }
 
   h2 {
-    font-size: var(--text-3xl);
+    font-size: var(--text-4xl);
   }
 
   h3 {
-    font-size: var(--text-2xl);
+    font-size: var(--text-3xl);
   }
 
   h4 {
-    font-size: var(--text-1xl);
+    font-size: var(--text-2xl);
   }
 
   h5 {
-    font-size: var(--text-lg);
+    font-size: var(--text-xl);
   }
 
   h6 {
-    font-size: var(--text-md);
+    font-size: var(--text-lg);
   }
 
   @variant lg {
     h1 {
-      font-size: var(--text-5xl);
+      font-size: var(--text-6xl);
     }
 
     h2 {
-      font-size: var(--text-4xl);
+      font-size: var(--text-5xl);
     }
 
     h3 {
-      font-size: var(--text-3xl);
+      font-size: var(--text-4xl);
     }
 
     h4 {
-      font-size: var(--text-2xl);
+      font-size: var(--text-3xl);
     }
 
     h5 {
-      font-size: var(--text-xl);
+      font-size: var(--text-2xl);
     }
 
     h6 {
-      font-size: var(--text-lg);
+      font-size: var(--text-xl);
     }
   }
 
@@ -217,98 +217,98 @@ label {
 /* inter-300 - latin */
 @font-face {
   font-display: swap;
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: normal;
   font-weight: 300;
-  src: url('/fonts/inter/inter-v18-latin-300.woff2') format('woff2');
+  src: url("/fonts/inter/inter-v18-latin-300.woff2") format("woff2");
 }
 /* inter-300italic - latin */
 @font-face {
   font-display: swap;
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: italic;
   font-weight: 300;
-  src: url('/fonts/inter/inter-v18-latin-300italic.woff2') format('woff2');
+  src: url("/fonts/inter/inter-v18-latin-300italic.woff2") format("woff2");
 }
 /* inter-regular - latin */
 @font-face {
   font-display: swap;
-  font-family: 'Montserrat';
+  font-family: "Inter";
   font-style: normal;
-  font-weight: 200;
-  src: url('/fonts/montserrat/Montserrat-Regular.ttf') format('ttf');
+  font-weight: 400;
+  src: url("/fonts/inter/inter-v18-latin-regular.woff2") format("woff2");
 }
 /* inter-italic - latin */
 @font-face {
   font-display: swap;
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: italic;
   font-weight: 400;
-  src: url('/fonts/inter/inter-v18-latin-italic.woff2') format('woff2');
+  src: url("/fonts/inter/inter-v18-latin-italic.woff2") format("woff2");
 }
 /* inter-500 - latin */
 @font-face {
   font-display: swap;
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: normal;
   font-weight: 500;
-  src: url('/fonts/inter/inter-v18-latin-500.woff2') format('woff2');
+  src: url("/fonts/inter/inter-v18-latin-500.woff2") format("woff2");
 }
 /* inter-500italic - latin */
 @font-face {
   font-display: swap;
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: italic;
   font-weight: 500;
-  src: url('/fonts/inter/inter-v18-latin-500italic.woff2') format('woff2');
+  src: url("/fonts/inter/inter-v18-latin-500italic.woff2") format("woff2");
 }
 /* inter-600 - latin */
 @font-face {
   font-display: swap;
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: normal;
   font-weight: 600;
-  src: url('/fonts/montserrat/Montserrat-Bold.ttf') format('ttf');
+  src: url("/fonts/inter/inter-v18-latin-600.woff2") format("woff2");
 }
 /* inter-600italic - latin */
 @font-face {
   font-display: swap;
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: italic;
   font-weight: 600;
-  src: url('/fonts/inter/inter-v18-latin-600italic.woff2') format('woff2');
+  src: url("/fonts/inter/inter-v18-latin-600italic.woff2") format("woff2");
 }
 /* inter-700 - latin */
 @font-face {
   font-display: swap;
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: normal;
   font-weight: 700;
-  src: url('/fonts/montserrat/Montserrat-Bold.ttf') format('ttf');
+  src: url("/fonts/inter/inter-v18-latin-700.woff2") format("woff2");
 }
 /* inter-700italic - latin */
 @font-face {
   font-display: swap;
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: italic;
   font-weight: 700;
-  src: url('/fonts/inter/inter-v18-latin-700italic.woff2') format('woff2');
+  src: url("/fonts/inter/inter-v18-latin-700italic.woff2") format("woff2");
 }
 /* inter-900 - latin */
 @font-face {
   font-display: swap;
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: normal;
   font-weight: 900;
-  src: url('/fonts/montserrat/Montserrat-Bold.ttf') format('ttf');
+  src: url("/fonts/inter/inter-v18-latin-900.woff2") format("woff2");
 }
 /* inter-900italic - latin */
 @font-face {
   font-display: swap;
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: italic;
   font-weight: 900;
-  src: url('/fonts/inter/inter-v18-latin-900italic.woff2') format('woff2');
+  src: url("/fonts/inter/inter-v18-latin-900italic.woff2") format("woff2");
 }
 
 .loader {
@@ -323,7 +323,7 @@ label {
   animation: animloader 2s linear infinite;
 }
 .loader::after {
-  content: '';
+  content: "";
   box-sizing: border-box;
   width: 2px;
   height: 12px;
